# gvp

./: .gitignore  GLOSSARY.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.gvp/: config.yaml  tags.yaml
.gvp/libraries/: gvp.yaml  v0.yaml
docs/: developing-a-library.md  flex-points.md  gap-remediation-plan.md  philosophy.md
docs/guide/: ai-integration.md  developing-a-library.md  getting-started.md  lightweight-capture.md  usage.md  workflow.md
docs/plans/: 2026-02-22-examples-and-docs-design.md  2026-02-22-examples-and-docs-implementation.md  2026-02-22-gvp-alignment-pass1-design.md  2026-02-22-gvp-alignment-pass1-implementation.md  2026-02-22-gvp-review-edit-design.md  2026-02-22-gvp-review-edit-implementation.md  2026-02-22-gvp-utility-design.md  2026-02-22-gvp-utility-implementation.md  2026-02-24-docs-reorg-design.md  2026-02-24-docs-reorg-implementation.md  2026-02-24-inline-tags-design.md  2026-02-24-multi-parent-inherits-design.md  2026-02-24-multi-parent-inherits-implementation.md  2026-02-24-quick-wins-design.md  2026-02-24-quick-wins-implementation.md  2026-02-25-schema-categories-design.md  2026-02-25-schema-categories-implementation.md  2026-02-26-v1-requirements.md  2026-03-02-v1-design-decisions.md
docs/reference/: config.md  schema.md  (+1 more)
scripts/: copy-data.mjs  gvp-hook.sh
skills/: decision-tracking-markdown.md
src/: errors.ts  index.ts
tests/: conftest.py  setup.test.ts  test_cli.py  test_config.py  test_integration.py  test_loader.py  test_model.py  test_schema.py
v1/: README.md  package.json
(+224 files in other folders)
